--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 12 14:55:38 CEST 2019
-sdk.dir=/Users/silviagomerabone/Library/Android/sdk
+#Thu Jun 13 09:17:19 CEST 2019
+sdk.dir=C\:\\Users\\formacio\\AppData\\Local\\Android\\Sdk
